--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,9 @@
 <body>
     <div class="card">
         <div class="search">
+            <i class="fa-solid fa-magnifying-glass"></i>
             <input type="text" spellcheck="false" placeholder="Enter City">
-            <button><i class="fa-solid fa-magnifying-glass"></i>Search</button>
+            <button>Search</button>
         </div>
     </div>
 </body>
