--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,27 @@
             <input type="text" spellcheck="false" placeholder="Enter City">
             <button>Search</button>
         </div>
+        <div class="weather">
+            <img src="../images/clear.png" alt="weather-icon" class="weather-icon">
+            <h1 class="temperature">27°C</h1>
+            <h2 class="city">Portland, Maine</h2>
+            <div class="weather-details">
+                <div class="col">
+                    <img src="../images/humidity.png" alt="humidity-details-icon">
+                    <div class="humidity">
+                        <p>50%</p>
+                        <p>Humidity</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <img src="../images/wind.png" alt="wind-details-icon">
+                    <div class="wind">
+                        <p>15 km/hr</p>
+                        <p>Wind Speed</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
