Weather detail functionality
Fetching weather details of a city from the API call and displaying it.

--- a/src/index.html
+++ b/src/index.html
@@ -21,20 +21,22 @@
             <div class="weather-details">
                 <div class="col">
                     <img src="../images/humidity.png" alt="humidity-details-icon">
-                    <div class="humidity">
-                        <p>50%</p>
+                    <div>
+                        <p class="humidity">50%</p>
                         <p>Humidity</p>
                     </div>
                 </div>
                 <div class="col">
                     <img src="../images/wind.png" alt="wind-details-icon">
-                    <div class="wind">
-                        <p>15 km/hr</p>
+                    <div>
+                        <p class="wind">15 km/hr</p>
                         <p>Wind Speed</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
