--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,15 @@
     <script src="https://kit.fontawesome.com/2fb3b799c2.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <h1 class="heading">Weather App</h1>
     <div class="card">
         <div class="search">
             <i class="fa-solid fa-magnifying-glass"></i>
             <input type="text" spellcheck="false" placeholder="Enter City">
             <button>Search</button>
+        </div>
+        <div class="error">
+            <p>Invalid City, try again!</p>
         </div>
         <div class="weather">
             <img src="../images/clear.png" alt="weather-icon" class="weather-icon">
