Images src update

--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
             <p>Invalid City, try again!</p>
         </div>
         <div class="weather">
-            <img src="../images/clear.png" alt="weather-icon" class="weather-icon">
+            <img src="images/clear.png" alt="weather-icon" class="weather-icon">
             <h1 class="temperature">27°C</h1>
             <h2 class="city">Portland, Maine</h2>
             <div class="weather-details">
                 <div class="col">
-                    <img src="../images/humidity.png" alt="humidity-details-icon">
+                    <img src="images/humidity.png" alt="humidity-details-icon">
                     <div>
                         <p class="humidity">50%</p>
                         <p>Humidity</p>
                     </div>
                 </div>
                 <div class="col">
-                    <img src="../images/wind.png" alt="wind-details-icon">
+                    <img src="images/wind.png" alt="wind-details-icon">
                     <div>
                         <p class="wind">15 km/hr</p>
                         <p>Wind Speed</p>
